# mmck-strings

./: .travis.yml  Makefile.am  NEWS  README  README.md  configure.ac
doc/: mmck-strings.texi
lib/: config.scm.in  mmck.strings.assertions.scm  mmck.strings.core.scm  mmck.strings.scm  mmck.strings.version.scm
tests/: test-strings-core.scm  test-version.scm
